# web_summarizer

./: .env.template  README.md  pyproject.toml  summarize.py
web_summarizer/: prompts.py  summarizer.py
