[tool.poetry]
name = "web-summarizer"
version = "0.1.0"
description = ""
authors = ["Miguel Amato <miamato@ucm.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.66.3"
dotenv = "^0.9.9"
beautifulsoup4 = "^4.13.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
